...
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    tools:listitem="@layout/item_user" />
            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Tambah Ujian"
                android:layout_marginStart="150dp"
                android:backgroundTint="#8BC34A"/>
...
