...
    app:cardUseCompatPadding="true"
    tools:context=".Adapters.AdapterBuku">

    <com.guanaj.easyswipemenulibrary.EasySwipeMenuLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:contentView="@+id/content"
        app:rightMenuView="@+id/right">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
...
